<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_tertiary"
        tools:context=".view.fragment.EditAppointmentFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/toolbar_background"
            android:elevation="4dp"
            android:padding="16dp"
            android:radius="16dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBaseline_toBottomOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/back"
                    android:paddingStart="10dp"
                    android:paddingEnd="150dp"
                    android:src="@drawable/back_arrow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:paddingStart="100dp"
                    android:paddingEnd="100dp"
                    android:text="@string/edit_appointment"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/idNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="ID"
                    android:textColor="@color/bg_secundary"
                    android:textSize="16sp"/>
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="115dp"
            android:paddingEnd="20dp"
            tools:context=".view.fragment.AddNewAppointmentFragment"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/petName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPetName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="15" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/ownerName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editOwner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="30" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/petBreed">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/telNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="100dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="100dp"
                android:background="@drawable/button"
                android:backgroundTint="@color/red_orange"
                android:drawableStart="@drawable/edit_icon"
                android:paddingStart="25dp"
                android:paddingEnd="22dp"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>